# occa-examples

./: build-instructions.txt
F90/: CMakeLists.txt  bin
F90/builds/demo_release/: CMakeCache.txt  Makefile  cmake_config.out  cmake_install.cmake  install_manifest.txt
F90/builds/demo_release/src/: Makefile  cmake_install.cmake
F90/src/: CMakeLists.txt  main.F90
F90/src/okl/: addVectors.okl  test.okl
cxx/: CMakeLists.txt
cxx/include/: Memory.hxx  Platform.hxx  Solver.hxx  function_to_macro.hxx  main.hxx  precision_types.h
cxx/src/: Platform.cxx  Solver.cxx  function_to_macro.cxx  main.cxx
cxx/src/okl/: jacobi.okl  jacobi_inner.okl  jacobi_inner.okl.macro  solver_okl.h  test.okl
cxx/utils/CheckSelfAssignment/: CMakeLists.txt
demo-F90/: CMakeLists.txt  configure.sh
demo-F90/src/: CMakeLists.txt  init_mod.F90  main.F90
demo-cxx/: configure.sh
demo-cxx/include/: Memory.hxx  Platform.hxx  Solver.hxx  initialize.hxx
demo-cxx/scripts/: util-check-macros.sh
demo-cxx/src/: CMakeLists.txt  Platform.cxx  Solver.cxx  initialize.cxx  main.cxx
demo-cxx/src/okl/: addVectors.okl  jacobi.okl  linearAlgebra.okl  precision_types.h  solver_okl.h  test.okl  test_struct.okl
demo-cxx/utils/: CMakeLists.txt
demo-cxx/utils/CheckSelfAssignment/: checkself.cxx
gpu-tutorial/: NOTES  NOTES-Profiling
gpu-tutorial/cuda/01-simple/: makefile
gpu-tutorial/cuda/02-addVectors/: makefile
gpu-tutorial/cuda/03-reverse/: makefile  reverse.cu
gpu-tutorial/cuda/04-jacobi/: jacobi.cu  makefile  run.sh
gpu-tutorial/occa/01-simple/: makefile  simple.cxx  simple.okl
gpu-tutorial/occa/02-addVectors/: addVectors.cxx  addVectors.okl  makefile
gpu-tutorial/occa/03-reverse/: makefile  reverse.cxx  reverse.okl
gpu-tutorial/occa/04-jacobi/: jacobi.cxx  jacobi.okl  makefile  partialReduce.okl
scripts/: interactive-cpu.sh  interactive-gpu.sh  interactive-h100.sh
